--- a/src/Modules/MasterModule/Views/Clients/ActivitySector.xaml
+++ b/src/Modules/MasterModule/Views/Clients/ActivitySector.xaml
@@ -16,14 +16,12 @@
                                            LabelText="Sector Actividad" 
                                           Height="25" 
                                           Margin="0,5,0,0"
-                                          AssistDataFieldFirst="NUM_ACTIVI"
-                                          AssistDataFieldSecond="NOMBRE"
                                           AssistTableName="ACTIVITY_ASSIST"
                                           IsReadOnlySecond="True"
                                           DataFieldFirst="SECTOR"
-                                          AssistProperties="Code,Nombre"
+                                          AssistProperties="Codigo,Nombre"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
+                                          MagnifierCommand="{Binding AssistCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                           SourceView="{Binding Path=ClientHelper.ActivityDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
@@ -41,7 +39,7 @@
                                           DataFieldFirst="TIPOCLI"
                                           AssistProperties="Code,Name"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
+                                          MagnifierCommand="{Binding AssistCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                           SourceView="{Binding Path=ClientHelper.ClientTypeDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
@@ -53,16 +51,14 @@
                                            LabelText="Zona Cliente" 
                                           Height="25" 
                                           Margin="0,5,0,0"
-                                          AssistDataFieldFirst="NUM_ZONA"
-                                          AssistDataFieldSecond="NOMBRE"
                                           AssistTableName="CLIENT_ZONE"
                                           IsReadOnlySecond="True"
                                           DataFieldFirst="ZONA"
                                           AssistProperties="Code,Name"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
+                                          MagnifierCommand="{Binding AssistCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding Path=ClientHelper.ClientZoneDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding Path=ClientHelper.ZoneDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
@@ -71,15 +67,12 @@
                                                       LabelText="Origen Cliente" 
                                                       Height="25" 
                                                       Margin="0,5,0,0"
-                                                      AssistDataFieldFirst="NUM_ORIGEN"
-                                                      AssistDataFieldSecond="NOMBRE"
-                                                      AssistTableName="ORIGEN"
+                                                      AssistTableName="ORIGIN_ASSIST"
                                                       IsReadOnlySecond="True"
-                                                      AssistQuery="{Binding AssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                                      DataFieldFirst="ZONA"
+                                                      DataFieldFirst="ORIGEN"
                                                       AssistProperties="Code,Name"
                                                       ItemChangedCommand="{Binding ItemChangedCommand}"
-                                                      MagnifierCommand="{Binding MagnifierCommand}" 
+                                                      MagnifierCommand="{Binding AssistCommand}" 
                                                       DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                       SourceView="{Binding Path=ClientHelper.OrigenDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                       LabelTextWidth="100"
@@ -92,12 +85,12 @@
                                                       Margin="0,5,0,0"
                                                       AssistDataFieldFirst="NUM_VENDE"
                                                       AssistDataFieldSecond="NOMBRE"
-                                                      AssistTableName="VENDEDOR"
+                                                      AssistTableName="RESELLER_ASSIST"
                                                       IsReadOnlySecond="True"
                                                       DataFieldFirst="VENDEDOR"
                                                       AssistProperties="Code,Name"
                                                       ItemChangedCommand="{Binding ItemChangedCommand}"
-                                                      MagnifierCommand="{Binding MagnifierCommand}" 
+                                                      MagnifierCommand="{Binding AssistCommand}" 
                                                       DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                       SourceView="{Binding Path=ClientHelper.ResellerDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                       LabelTextWidth="100"
@@ -108,17 +101,17 @@
                 </GroupBox>
             <GroupBox Header="Mercados">
                 <StackPanel>
-           
+
                     <KarveControls:DualFieldSearchBox x:Name="Mercado" 
                                            LabelText="Mercado" 
                                           Height="25" 
                                           Margin="0,5,0,0"
-                                          AssistTableName="CLIENT_MARKET"
+                                          AssistTableName="MARKET_ASSIST"
                                           IsReadOnlySecond="True"
                                           DataFieldFirst="MERCADO"
-                                          AssistProperties="Code,Nombre"
+                                          AssistProperties="Code,Name"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
+                                          MagnifierCommand="{Binding AssistCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                           SourceView="{Binding ClientHelper.ClientMarketDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
@@ -129,16 +122,13 @@
                                            LabelText="Negocio" 
                                           Height="25" 
                                           Margin="0,5,0,0"
-                                          AssistDataFieldFirst="NUM_PROVEE"
-                                          AssistDataFieldSecond="NOMBRE"
-                                          AssistTableName="{Binding AssuranceKind, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          AssistTableName="BUSINESS_ASSIST"
                                           IsReadOnlySecond="True"
-                                          AssistQuery="{Binding AssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                          DataFieldFirst="{Binding AssuranceCompanyPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          AssistProperties="Code,Nombre"
+                                          DataFieldFirst="Negocio"
+                                          AssistProperties="Code,Name"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
-                                          DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                          MagnifierCommand="{Binding AssistCommand}" 
+                                          DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                           SourceView="{Binding Path=ClientHelper.BusinessDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
@@ -148,14 +138,14 @@
                                            LabelText="Canal" 
                                           Height="25" 
                                           Margin="0,5,0,0"
-                                          AssistTableName="CANAL_TABLE"
+                                          AssistTableName="CHANNEL_TYPE"
                                           IsReadOnlySecond="True"
                                           DataFieldFirst="CANAL"
-                                          AssistProperties="Code,Nombre"
+                                          AssistProperties="Code,Name"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
-                                          DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding Path=ClientHelper.CanalDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          MagnifierCommand="{Binding AssistCommand}" 
+                                          DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding Path=ClientHelper.ChannelDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
@@ -164,14 +154,13 @@
                                            LabelText="Cl.Presuppuosto" 
                                           Height="25" 
                                           Margin="0,5,0,0"
-                                          AssistTableName="CLAVEPPTO"
+                                          AssistTableName="BUDGET_KEY"
                                           IsReadOnlySecond="True"
-                                          AssistQuery="{Binding AssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                          DataFieldFirst="{Binding AssuranceCompanyPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          AssistProperties="Code,Nombre"
+                                          DataFieldFirst="CLAVEPTO"
+                                          AssistProperties="Code,Name"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
-                                          DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                          MagnifierCommand="{Binding AssistCommand}" 
+                                          DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                           SourceView="{Binding Path=ClientHelper.BudgetKeyDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
@@ -183,13 +172,12 @@
                                           Margin="0,5,0,0"
                                           AssistDataFieldFirst="CODIGO"
                                           AssistDataFieldSecond="NOMBRE"
-                                          AssistTableName="RENT_USAGE"
+                                          AssistTableName="RENT_USAGE_ASSIST"
                                           IsReadOnlySecond="True"
-                                          AssistQuery="{Binding AssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           DataFieldFirst="USO_ALQUILER"
-                                          AssistProperties="Code,Nombre"
+                                          AssistProperties="Code,Name"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
+                                          MagnifierCommand="{Binding AssistCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                           SourceView="{Binding Path=ClientHelper.RentUsageDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
@@ -200,14 +188,13 @@
                                           LabelText="Idioma" 
                                           Height="25" 
                                           Margin="0,5,0,0"
-                                          AssistTableName="{Binding AssuranceKind, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          AssistTableName="LANGUAGE_ASSIST"
                                           IsReadOnlySecond="True"
-                                          AssistQuery="{Binding AssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                          DataFieldFirst="{Binding AssuranceCompanyPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          AssistProperties="Code,Nombre"
+                                          DataFieldFirst="IDIOMA"
+                                          AssistProperties="Codigo,Nombre"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
-                                          DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                          MagnifierCommand="{Binding AssistCommand}" 
+                                          DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                           SourceView="{Binding Path=ClientHelper.LanguageDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
@@ -224,8 +211,7 @@
 
 
                 </StackPanel>
-
             </GroupBox>
-                    </StackPanel>
+        </StackPanel>
     </Grid>
 </UserControl>
