--- a/src/Modules/MasterModule/Views/Clients/BillingDates.xaml
+++ b/src/Modules/MasterModule/Views/Clients/BillingDates.xaml
@@ -41,13 +41,13 @@
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <KarveControls:DataFieldCheckBox Content="Una per contracto" 
                                                  KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay}"
-                                                 KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommond, Mode=OneWay}"
+                                                 KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
                                                  KarveControls:ControlExt.DataSourcePath="PERIODICI"
                                                  HorizontalAlignment="Left"
                                                  VerticalAlignment="Top"/>
                 <KarveControls:DataFieldCheckBox Content="Por periodo"
                                              KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay}"
-                                                 KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommond, Mode=OneWay}"
+                                                 KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
                                                  KarveControls:ControlExt.DataSourcePath="PERIODICI"
                                                  HorizontalAlignment="Left"
                                                  VerticalAlignment="Top"
@@ -63,7 +63,7 @@
                                           DataFieldFirst="NUM_COMI"
                                           AssistProperties="Codigo,Nombre"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding AssitCommand}" 
+                                          MagnifierCommand="{Binding AssistCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                           SourceView="{Binding BrokerSummaryDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="50"
