--- a/src/Modules/MasterModule/Views/Clients/ClientBilling.xaml
+++ b/src/Modules/MasterModule/Views/Clients/ClientBilling.xaml
@@ -11,75 +11,6 @@
                 syncfusion:DockingManager.TargetNameInDockedMode="Facturacion">
     <Grid x:Name="BillingLayout">
         <Grid.Resources>
-            <ResourceDictionary>
-                <DataTemplate x:Key="PlazoPago">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding lplazodepago, Source={StaticResource ResourceLanguage}}" Margin="10,0,0,10"></TextBlock>
-                        <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                     DataSourcePath="PLAZO"
-                                                     LabelVisible="False"
-                                                     TextContentWidth="50"
-                                                     Margin="0,5,0,0"
-                                                     Height="25"
-                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
-
-                        </KarveControls:DataField>
-
-                        <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                     DataSourcePath="PLAZO2"
-                                                     LabelVisible="False"
-                                                     TextContentWidth="50"
-                                                     Height="25"
-                                                         Margin="0,5,0,0"
-                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
-
-                        </KarveControls:DataField>
-                        
-                        <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                     DataSourcePath="PLAZO3"
-                                                     LabelVisible="False"
-                                                         Margin="0,5,0,0"
-                                                     TextContentWidth="50"
-                                                     Height="25"
-                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
-
-                        </KarveControls:DataField>
-                        <TextBlock Text="{Binding ldiadepago, Source={StaticResource ResourceLanguage}}" Margin="5,0,0,5"></TextBlock>
-                        <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                     DataSourcePath="DIA"
-                                                         Margin="0,5,0,0"
-                                                     LabelVisible="False"
-                                                     TextContentWidth="50"
-                                                     Height="25"
-                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
-
-                        </KarveControls:DataField>
-
-                        <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                     DataSourcePath="DIA2"
-                                                         Margin="0,5,0,0"
-                                                     LabelVisible="False"
-                                                     TextContentWidth="50"
-                                                     Height="25"
-                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
-
-                        </KarveControls:DataField>
-
-
-                        <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                     DataSourcePath="DIA3"
-                                                         Margin="0,5,0,0"
-                                                     LabelVisible="False"
-                                                     TextContentWidth="50"
-                                                     Height="25"
-                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
-
-                        </KarveControls:DataField>
-                    </StackPanel>
-
-
-                </DataTemplate>
-            </ResourceDictionary>
 
         </Grid.Resources>
         <Grid.RowDefinitions>
@@ -90,37 +21,7 @@
 
         </Grid.RowDefinitions>
 
-        <Grid Margin="10,10,0,0"
-              VerticalAlignment="Top" 
-              Grid.Row="0" >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-
-            <KarveControls:DataField x:Name="Risk"   
-                                     LabelText="Riesgo" 
-                                     LabelVisible="True" 
-                                     LabelTextWidth="103"
-                                     Height="35"
-                                     Grid.Column="0"
-                                     DataSourcePath="RIESGOIMP" 
-                                     ItemChangedCommand="{Binding ItemChangedCommand}"
-                                     DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                                     TextContentWidth="200"/>
-            <syncfusion:CurrencyTextBox 
-                x:Name="CurrentBox" Grid.Column="1" 
-                CurrencyGroupSeparator="," 
-                CurrencyDecimalSeparator="." 
-                CurrencySymbol="€" 
-                HorizontalAlignment="Left" Height="35"  
-                Text="€" 
-                Value="{Binding DataObject.RIESGO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
-                KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=OneWay}"
-                KarveControls:ControlExt.DataSourcePath="RIESGO"
-                VerticalAlignment="Top" Width="100"/>
-        </Grid>
+        
         <StackPanel Orientation="Horizontal" Grid.Row="1">
             <KarveControls:DataField x:Name="ImportePendiente"   
                                      LabelText="Importe Pendiente" LabelVisible="True" 
@@ -140,6 +41,7 @@
                                      TextContentWidth="200"/>
 
             <KarveControls:DualFieldSearchBox
+                                             x:Name="FormaDePago"
                                              LabelText ="Forma de Pago"
                                              LabelVisible="True"
                                              LabelTextWidth="100"
@@ -161,8 +63,8 @@
         </StackPanel>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="257*"/>
-                <ColumnDefinition Width="293*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <StackPanel  Orientation="Horizontal" Grid.ColumnSpan="2">
                 <TextBlock Text="{Binding lplazodepago, Source={StaticResource ResourceLanguage}}" Margin="10,0,0,10"></TextBlock>
