--- a/src/Modules/MasterModule/Views/DriversControlView.xaml
+++ b/src/Modules/MasterModule/Views/DriversControlView.xaml
@@ -11,11 +11,12 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid  x:Name="LayoutRoot" Background="White" Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
+            <RowDefinition />
+            <RowDefinition />
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-
+        
         <Grid.Resources>
             <ResourceDictionary>
                 <ObjectDataProvider x:Key="FilterMode"
@@ -31,6 +32,8 @@
                 </Style>
             </ResourceDictionary>
         </Grid.Resources>
+        
+
         <Syncfusion:SfDataGrid x:Name="DriverControlViewSummary"
                                Grid.Row="0"
                                ColumnSizer="Star"
@@ -46,7 +49,7 @@
                                karveControls:KarveGridExt.GridInitCommand="{Binding GridRegisterCommand, Mode=OneWay}"
                                karveControls:KarveGridExt.GridParamChangedCommand="{Binding GridResizeCommand, Mode=OneWay}"
                                karveControls:KarveGridExt.GridParameters="{Binding GridParam, Mode=OneWay}"
-                               ItemsSource="{Binding SummaryView, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                               ItemsSource="{Binding Drivers, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                AutoGenerateColumns="False">
 
 
@@ -134,6 +137,6 @@
 
         </Syncfusion:SfDataGrid>
 
-        <Button Command="{Binding GoForwardCommand}" Grid.Row="1" Margin="10" Width="75">Go Forward</Button>
+        <Button Command="{Binding GoForwardCommand}" Grid.Row="1" Margin="10" Width="75">Atras</Button>
     </Grid>
 </UserControl>
